# dt_video

./: CLAUDE.md  CLIP_SELECTION_IMPLEMENTATION.md  FRONTEND_SWITCHING_GUIDE.md  IMPLEMENTATION_LOG_A.md  IMPLEMENTATION_LOG_B.md  PACKAGING_PLAN.md  PLAYHEAD_VISUAL_GUIDE.md  README.md  elm-timeline-todo.md  prd-main.md  repomix-output.xml  to-do-ffmpeg-grock.md  zen_generated.code
.claude/: settings.local.json
.taskmaster/: state.json
clipforge/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
clipforge/src-tauri/: Cargo.toml  Info.plist  build.rs  fix-and-run.sh  tauri.conf.elm.json  tauri.conf.json  tauri.conf.react.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
clipforge/src-tauri/binaries/: .gitignore  README.md  download.sh  ffmpeg  ffprobe  manifest.json
clipforge/src-tauri/frontend/: README.md  elm.js  elm.json  index.html  package.json  pnpm-lock.yaml  style.css  tailwind.config.js  vite.config.js
clipforge/src-tauri/frontend/elm-stuff/0.19.1/: Main.elmi  Main.elmo  MediaLibrary.elmi  MediaLibrary.elmo
clipforge/src-tauri/frontend/src/: Main.elm  MediaLibrary.elm  index.css  main.js
clipforge/src-tauri/icons/: icon.icns
clipforge/src-tauri/scripts/: fix-cargo.sh
clipforge/src-tauri/src/: lib.rs  main.rs
clipforge/src-tauri/src/utils/: ffmpeg.rs
clipforge/src-tauri/tests/: ffmpeg_tests.rs
frontend/: PREACT_SETUP.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
log_docs/: README.md  (+39 more)
(+96 files in other folders)
