[package]
name = "clipforge"
version = "0.1.0"
description = "A Tauri video editor application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "clipforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["api-all"] }
nokhwa = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt", "process"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
