[package]
name = "clipforge"
version = "0.1.0"
description = "A Tauri video editor application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "clipforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
nokhwa = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt", "process"] }
regex = "1.10"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.10"
assert_cmd = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
